# system-application-software

./: tech_stack.odt
long_stack/: CMakeLists.txt  a.out  main.cpp
long_stack/src/exception/: Exception.cpp  Exception.h  emptyStackException.cpp  emptyStackException.h  stackException.cpp  stackException.h  stackExceptionInclude.h  stackOverflowException.cpp  stackOverflowException.h
long_stack/src/node/: Node.cpp  Node.h
long_stack/src/stack/: Stack.cpp  Stack.h
